fix community list overflow

--- a/django_project/web-app/css/home/main.css
+++ b/django_project/web-app/css/home/main.css
@@ -64,6 +64,8 @@ html, body {
     padding: 0;
     font-size: 14px;
     margin: 0;
+    max-height: 500px;
+    overflow-y: scroll;
 }
 
 .main-ul li {
